other-vpol/require-non-root-groups/.chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  securityContext:
    runAsGroup: 1
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      runAsGroup: 1
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      runAsGroup: 1
  securityContext:
    runAsGroup: 1
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: container02
    image: ghcr.io/kyverno/test-busybox:1.35
  securityContext:
    runAsGroup: 1
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: container02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      runAsGroup: 1
  securityContext:
    runAsGroup: 1
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  securityContext:
    runAsGroup: 1
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod07
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      runAsGroup: 1
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  securityContext:
    runAsGroup: 1
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod08
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      runAsGroup: 1
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      runAsGroup: 1
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod09
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      runAsGroup: 1
  - name: initcontainer02
    image: ghcr.io/kyverno/test-busybox:1.35
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  securityContext:
    runAsGroup: 1
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod10
spec:
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      runAsGroup: 1
  - name: initcontainer02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      runAsGroup: 1
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      runAsGroup: 1
---
apiVersion: v1
kind: Pod
metadata:
  name: supgrp-goodpod02
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  securityContext:
    runAsGroup: 1
    supplementalGroups: [32]
---
apiVersion: v1
kind: Pod
metadata:
  name: supgrp-goodpod03
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  securityContext:
    runAsGroup: 1
    supplementalGroups: [32,94]
---
apiVersion: v1
kind: Pod
metadata:
  name: fsgrp-goodpod02
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  securityContext:
    runAsGroup: 1
    fsGroup: 32
